# jenkins-vr

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: FindGLIB2.cmake  FindGStreamer.cmake
docs/: Jenkins-VR.uml  statechart.plant
lang/ru-RU/: means  ru-RU.dic  ru-RU.jsgf  transition_matrices  variances
libs/: CMakeLists.txt  apply_patch.bat  definition_fix.patch  gstplugin_fix.patch  gstpocketsphinx.cmake  pocketsphinx.cmake  sphinxbase.cmake
src/: main.cpp
src/api/: ICIClient.hpp  ICIServerProxy.hpp  IFilePlayer.hpp  IJob.hpp  IRecognizer.hpp  ITextToSpeech.hpp  Signals.hpp
src/api/private/: IFilePlayer.cpp  IRecognizer.cpp  ITextToSpeech.cpp
src/imp/: CLogger.hpp
src/imp/gstreamer/: CGstElement.cpp  CGstElement.hpp  CGstPad.cpp  CGstPad.hpp  CGstPipeline.cpp  CGstPipeline.hpp
src/imp/logger/: CLogger.hpp
src/imp/logger/private/: CLogger.cpp
src/imp/player/: CFilePlayer.hpp
src/imp/player/private/: CFilePlayer.cpp
src/imp/private/: CLogger.cpp
src/imp/recognizer/: CSphinxRecognizer.hpp
src/imp/recognizer/private/: CDecoder.cpp  CDecoder.hpp  CGstRecognizerPipeline.cpp  CGstRecognizerPipeline.hpp  CSphinxRecognizer.cpp
src/imp/tts/: CWinTTS.hpp
src/imp/tts/private/: CWinTTS.cpp
